# smolnn2

./: .gitignore  Cargo.toml  backprop.md
examples/: categorize_macro.rs  linear.rs  linear2.rs  linear_macro.rs  simple.rs  simple_macro.rs
mnist/: Cargo.toml  get_db.sh
mnist/src/: main.rs  reader.rs
smolnn2-macro/: Cargo.toml
smolnn2-macro/src/: lib.rs
src/: activation.rs  adam.rs  fcnn.rs  gd.rs  lib.rs  linear.rs  loss.rs
