[workspace]
members = ["smolnn2-macro"]
[package]
name = "smolnn2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
smolmatrix = "0.4.0"
smolnn2-macro = { version = "0.1.0", path = "smolnn2-macro", optional = true }

[dev-dependencies]
fastrand = "2.3.0"

[features]
macro = ["dep:smolnn2-macro"]
serde = ["dep:serde", "smolmatrix/serde"]

[[example]]
name = "linear_macro"
required-features = ["macro"]

[[example]]
name = "simple_macro"
required-features = ["macro"]

[[example]]
name = "categorize_macro"
required-features = ["macro"]
